[package]
name = "automated_teller_machine_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
color-eyre = "0.6.2"
crossterm = "0.27.0"
mysql = "24.0.0"
mysql_common = "0.31.0"
once_cell = "1.19.0"
ratatui = "0.24.0"
rust_decimal = "1.33.1"
tui-textarea = "0.4.0"
url = "2.5.0"
